[project]
name = "langchain01"
version = "0.1.0"
description = ""
authors = [
    {name = "vasanth",email = "vasantkr97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-core (>=0.3.78,<0.4.0)",
    "langchain-openai (>=0.3.34,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
