[project]
name = "langchain01"
version = "0.1.0"
description = ""
authors = [
    {name = "vasanth",email = "vasantkr97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-core (>=0.3.78,<0.4.0)",
    "langchain-openai (>=0.3.34,<0.4.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pydantic (>=2.11.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
